# vkPOS5

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  dbdriver4.cpp  dbdriver4.h  main.cpp  print.cpp  print.h
.github/workflows/: cmake-multi-platform.yml
data/: db.sqlite  vkPOS5-init.sql  vkPOS5.sql
qt/: lib.js  libREST.js  libSettings.js  libTAX.js
qt/qml/: Balance.qml  Bind.qml  Client.qml  DcmView.qml  DrawerItem.qml  LogView.qml  Login.qml  Main.qml  MainKant.qml  MainShop.qml  ModelBalance.qml  ModelBind.qml  ModelDbDcms.qml  ModelDrawer.qml  ModelRates.qml  Rate.qml  Settings.qml  Shift.qml  Stat.qml  TaxService.qml  WizardCash.qml
qt/qml/js/: sqlAcnt.js  sqlItem.js
qt/qml/js/v146/: sqlAcnt.js  sqlItem.js  sqlPrice.js
